Add section <<Random values>>

--- a/Numpy/Numpy.ipynb
+++ b/Numpy/Numpy.ipynb
@@ -1416,7 +1416,7 @@
    "id": "a2391878",
    "metadata": {},
    "source": [
-    "# Multiplicacion"
+    "# Multiplicación"
    ]
   },
   {
@@ -1669,24 +1669,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "ddce1381",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([55, 67, 90, 81, 70, 42, 77, 48, 64, 99, 63, 76, 41, 63, 67, 52, 81,\n",
+       "       60, 96, 51, 59, 61, 53, 50, 86, 56, 43, 91, 91, 69, 59, 79, 41, 91,\n",
+       "       51, 87, 69, 58, 99, 51, 53, 76, 66, 44, 83, 45, 74, 48, 65, 46, 73,\n",
+       "       84, 48, 44, 47, 90, 45, 93, 48, 56, 66, 82, 51, 66, 86, 50, 40, 72,\n",
+       "       44, 96, 44, 40, 63, 98, 69, 94, 97, 60, 57, 60, 46, 87, 97, 40, 74,\n",
+       "       78, 84, 40, 94, 44, 46, 71, 76, 51, 54, 49, 44, 43, 93, 91],\n",
+       "      dtype=int32)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Entero\n",
+    "np.random.randint(40,100,100)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "d567cea7",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.74566484, 0.21674125, 0.69949368, 0.52362232, 0.40686011,\n",
+       "       0.20315922, 0.5738215 , 0.60331232, 0.33470392, 0.60292227,\n",
+       "       0.13723537, 0.35267456, 0.28776243, 0.71224201, 0.31385812,\n",
+       "       0.17561   , 0.15634217, 0.17538053, 0.27717626, 0.40672945,\n",
+       "       0.33861685, 0.3081731 , 0.83689009, 0.70646972, 0.14970076,\n",
+       "       0.14118817, 0.50096727, 0.30654788, 0.66740427, 0.35172996,\n",
+       "       0.6840549 , 0.29839652, 0.54982003, 0.66049178, 0.6434558 ,\n",
+       "       0.6820067 , 0.17356295, 0.19615331, 0.607472  , 0.84678486,\n",
+       "       0.66543278, 0.63780282, 0.14856538, 0.41620404, 0.44076573,\n",
+       "       0.5265319 , 0.46596018, 0.85699484, 0.12775748, 0.11875985,\n",
+       "       0.23223015, 0.42343721, 0.19245322, 0.79880554, 0.6085211 ,\n",
+       "       0.7142116 , 0.36793179, 0.53423545, 0.56535374, 0.72786749,\n",
+       "       0.56264535, 0.19299857, 0.50098833, 0.15199826, 0.21885029,\n",
+       "       0.27017947, 0.88334514, 0.6086796 , 0.28151072, 0.4301166 ,\n",
+       "       0.60367828, 0.30240781, 0.16078315, 0.55608701, 0.76386754,\n",
+       "       0.3353853 , 0.49455075, 0.31450655, 0.57615307, 0.6388021 ,\n",
+       "       0.41868258, 0.79735481, 0.83866046, 0.15174167, 0.1115489 ,\n",
+       "       0.37626779, 0.19845773, 0.30473304, 0.27128181, 0.80556618,\n",
+       "       0.12121718, 0.62787496, 0.32848039, 0.59138721, 0.26628467,\n",
+       "       0.37765053, 0.88796645, 0.83729572, 0.52184693, 0.10148057])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Decimal\n",
+    "np.random.uniform(0.1,0.9,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "b827c2c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.39291034, 0.30436554, 0.79677648, 0.47388208, 0.86371553,\n",
+       "       0.3659481 , 0.52988646, 0.8514655 , 0.49488924, 0.10165313,\n",
+       "       0.4260816 , 0.71889701, 0.44350741, 0.31534788, 0.23909309,\n",
+       "       0.30612208, 0.23066619, 0.74472542, 0.69728016, 0.46015021,\n",
+       "       0.37715578, 0.47784947, 0.24164193, 0.76025506, 0.68463327,\n",
+       "       0.45514327, 0.78348721, 0.6124076 , 0.19378254, 0.3633389 ,\n",
+       "       0.77766659, 0.67883886, 0.64668317, 0.87790028, 0.80016276,\n",
+       "       0.81391781, 0.89431541, 0.11673042, 0.66933356, 0.77702172,\n",
+       "       0.57325353, 0.28477274, 0.58575284, 0.20552729, 0.73065035,\n",
+       "       0.57918875, 0.30276159, 0.86752003, 0.49065942, 0.36862107,\n",
+       "       0.49769814, 0.55609018, 0.65264095, 0.17459279, 0.14941028,\n",
+       "       0.43962847, 0.6857647 , 0.28834758, 0.38993916, 0.63740322,\n",
+       "       0.25690607, 0.48853202, 0.34936369, 0.80242296, 0.36068776,\n",
+       "       0.89475567, 0.61062554, 0.21468146, 0.28793506, 0.80041163,\n",
+       "       0.59754569, 0.61291831, 0.72495388, 0.63777187, 0.17815178,\n",
+       "       0.71738776, 0.32281473, 0.62957667, 0.1258983 , 0.32634049,\n",
+       "       0.69771562, 0.3274517 , 0.41984215, 0.12472317, 0.49302584,\n",
+       "       0.70455542, 0.56625089, 0.64142178, 0.6486425 , 0.23489215,\n",
+       "       0.3386147 , 0.45425973, 0.47225572, 0.61910226, 0.25685342,\n",
+       "       0.36087474, 0.708632  , 0.22581373, 0.66821663, 0.6007949 ])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pendientes = np.random.uniform(0.1,0.9,100)\n",
+    "pendientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "e9b007e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "103.74012267692959\n",
+      "119.10128505012551\n",
+      "198.88683456423277\n",
+      "103.42488944693606\n",
+      "226.64024616861454\n",
+      "106.92798234277306\n",
+      "111.19591723019205\n",
+      "221.48357019633295\n",
+      "105.63208624346741\n",
+      "187.63220648701514\n",
+      "101.88814859170611\n",
+      "168.3283298136534\n",
+      "101.87258022906731\n",
+      "116.49177353966563\n",
+      "137.66066571265745\n",
+      "118.67252450398408\n",
+      "140.37223113848123\n",
+      "178.20158020501273\n",
+      "160.31206486817467\n",
+      "102.47733085601675\n",
+      "105.42770982846072\n",
+      "103.77262207386063\n",
+      "136.85275525213143\n",
+      "184.27253208368768\n",
+      "155.74154684026735\n",
+      "102.23216211373071\n",
+      "193.51865025293264\n",
+      "131.81288985646398\n",
+      "152.89639184213863\n",
+      "107.31175651021607\n",
+      "191.18491084847776\n",
+      "153.6797108127138\n",
+      "142.65181863510918\n",
+      "232.6485009968868\n",
+      "200.26319132106664\n",
+      "205.88722868941252\n",
+      "239.64747766887498\n",
+      "181.6883312451563\n",
+      "150.34418744697447\n",
+      "190.92704044449607\n",
+      "120.90622012716511\n",
+      "124.15987709379098\n",
+      "124.1927145200017\n",
+      "148.80125098409027\n",
+      "172.7842597735442\n",
+      "122.44226810693172\n",
+      "119.49649354296992\n",
+      "228.24792804225797\n",
+      "105.11603854633573\n",
+      "106.548190374203\n",
+      "105.99421793716171\n",
+      "116.73006738353838\n",
+      "144.6380447397581\n",
+      "159.77651706191432\n",
+      "169.1185653196493\n",
+      "101.81844072249062\n",
+      "156.1465738299815\n",
+      "123.2005070591015\n",
+      "104.01972208041192\n",
+      "139.61484059379845\n",
+      "132.14087558747514\n",
+      "104.86993145139537\n",
+      "109.58077804913148\n",
+      "201.18369857077144\n",
+      "107.7147556879695\n",
+      "239.8358353674742\n",
+      "131.27952935149375\n",
+      "145.67620516538784\n",
+      "123.31041451261932\n",
+      "200.3644780592185\n",
+      "127.4668118771317\n",
+      "131.96633522995927\n",
+      "170.61656563878293\n",
+      "139.73411936744307\n",
+      "158.4838787890558\n",
+      "167.7608896209543\n",
+      "114.81770688869747\n",
+      "137.1102510423956\n",
+      "178.11646364199137\n",
+      "114.05663455605782\n",
+      "160.4710825510525\n",
+      "113.82076673350586\n",
+      "102.05539045876036\n",
+      "178.5724234446575\n",
+      "105.40038746349023\n",
+      "162.98252235438807\n",
+      "119.15336608065647\n",
+      "140.92124799209367\n",
+      "143.30196235308466\n",
+      "139.00477609440046\n",
+      "111.56081121860107\n",
+      "102.19452410639295\n",
+      "103.29183790892117\n",
+      "133.84491259842767\n",
+      "132.15674225495013\n",
+      "107.6859047956031\n",
+      "164.49133218166247\n",
+      "141.96081522399007\n",
+      "149.9562034442371\n",
+      "128.3967377087014\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(100):\n",
+    "    print(np.linalg.norm(Moscu-(pendientes[i]*x + b)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "7843e76a",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "norma = np.array([])\n",
+    "\n",
+    "for i in range(100):\n",
+    "    norma = np.append(norma, np.linalg.norm(Moscu-(pendientes[i]*x +b)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "39e6c580",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([103.74012268, 119.10128505, 198.88683456, 103.42488945,\n",
+       "       226.64024617, 106.92798234, 111.19591723, 221.4835702 ,\n",
+       "       105.63208624, 187.63220649, 101.88814859, 168.32832981,\n",
+       "       101.87258023, 116.49177354, 137.66066571, 118.6725245 ,\n",
+       "       140.37223114, 178.20158021, 160.31206487, 102.47733086,\n",
+       "       105.42770983, 103.77262207, 136.85275525, 184.27253208,\n",
+       "       155.74154684, 102.23216211, 193.51865025, 131.81288986,\n",
+       "       152.89639184, 107.31175651, 191.18491085, 153.67971081,\n",
+       "       142.65181864, 232.648501  , 200.26319132, 205.88722869,\n",
+       "       239.64747767, 181.68833125, 150.34418745, 190.92704044,\n",
+       "       120.90622013, 124.15987709, 124.19271452, 148.80125098,\n",
+       "       172.78425977, 122.44226811, 119.49649354, 228.24792804,\n",
+       "       105.11603855, 106.54819037, 105.99421794, 116.73006738,\n",
+       "       144.63804474, 159.77651706, 169.11856532, 101.81844072,\n",
+       "       156.14657383, 123.20050706, 104.01972208, 139.61484059,\n",
+       "       132.14087559, 104.86993145, 109.58077805, 201.18369857,\n",
+       "       107.71475569, 239.83583537, 131.27952935, 145.67620517,\n",
+       "       123.31041451, 200.36447806, 127.46681188, 131.96633523,\n",
+       "       170.61656564, 139.73411937, 158.48387879, 167.76088962,\n",
+       "       114.81770689, 137.11025104, 178.11646364, 114.05663456,\n",
+       "       160.47108255, 113.82076673, 102.05539046, 178.57242344,\n",
+       "       105.40038746, 162.98252235, 119.15336608, 140.92124799,\n",
+       "       143.30196235, 139.00477609, 111.56081122, 102.19452411,\n",
+       "       103.29183791, 133.8449126 , 132.15674225, 107.6859048 ,\n",
+       "       164.49133218, 141.96081522, 149.95620344, 128.39673771])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norma"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b827c2c6",
+   "id": "1d103b25",
    "metadata": {},
    "outputs": [],
    "source": []
