--- a/Numpy/Numpy.ipynb
+++ b/Numpy/Numpy.ipynb
@@ -1664,7 +1664,7 @@
    "id": "11d86e43",
    "metadata": {},
    "source": [
-    "## Valores Aleatorios"
+    "# Valores Aleatorios"
    ]
   },
   {
@@ -1954,9 +1954,234 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47f4a904",
+   "metadata": {},
+   "source": [
+    "## Obtener valores aleatorios y que se mantienen iguales al ejecutarlos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "1d103b25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.78209673, 0.60313069, 0.53589699, 0.47465432, 0.17810814])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.uniform(0.1,0.9,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "9a2c58b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.65762612, 0.2215882 , 0.83820977, 0.18800325, 0.37278107])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.uniform(0.1,0.9,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "267bfee4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.69891256, 0.33073388, 0.20465306, 0.73950489, 0.45836365])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.uniform(0.1,0.9,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "3d9cf863",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.63782285, 0.49046272, 0.76039614, 0.12515711, 0.74643997])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(99)\n",
+    "np.random.uniform(0.1,0.9,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "2f9bfb64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.63782285, 0.49046272, 0.76039614, 0.12515711, 0.74643997])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(99)\n",
+    "np.random.uniform(0.1,0.9,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "c3c2a288",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([103.74012268, 119.10128505, 198.88683456, 103.42488945,\n",
+       "       226.64024617, 106.92798234, 111.19591723, 221.4835702 ,\n",
+       "       105.63208624, 187.63220649, 101.88814859, 168.32832981,\n",
+       "       101.87258023, 116.49177354, 137.66066571, 118.6725245 ,\n",
+       "       140.37223114, 178.20158021, 160.31206487, 102.47733086,\n",
+       "       105.42770983, 103.77262207, 136.85275525, 184.27253208,\n",
+       "       155.74154684, 102.23216211, 193.51865025, 131.81288986,\n",
+       "       152.89639184, 107.31175651, 191.18491085, 153.67971081,\n",
+       "       142.65181864, 232.648501  , 200.26319132, 205.88722869,\n",
+       "       239.64747767, 181.68833125, 150.34418745, 190.92704044,\n",
+       "       120.90622013, 124.15987709, 124.19271452, 148.80125098,\n",
+       "       172.78425977, 122.44226811, 119.49649354, 228.24792804,\n",
+       "       105.11603855, 106.54819037, 105.99421794, 116.73006738,\n",
+       "       144.63804474, 159.77651706, 169.11856532, 101.81844072,\n",
+       "       156.14657383, 123.20050706, 104.01972208, 139.61484059,\n",
+       "       132.14087559, 104.86993145, 109.58077805, 201.18369857,\n",
+       "       107.71475569, 239.83583537, 131.27952935, 145.67620517,\n",
+       "       123.31041451, 200.36447806, 127.46681188, 131.96633523,\n",
+       "       170.61656564, 139.73411937, 158.48387879, 167.76088962,\n",
+       "       114.81770689, 137.11025104, 178.11646364, 114.05663456,\n",
+       "       160.47108255, 113.82076673, 102.05539046, 178.57242344,\n",
+       "       105.40038746, 162.98252235, 119.15336608, 140.92124799,\n",
+       "       143.30196235, 139.00477609, 111.56081122, 102.19452411,\n",
+       "       103.29183791, 133.8449126 , 132.15674225, 107.6859048 ,\n",
+       "       164.49133218, 141.96081522, 149.95620344, 128.39673771])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(99)\n",
+    "\n",
+    "norma = np.array([])\n",
+    "\n",
+    "for i in range(100):\n",
+    "    norma = np.append(norma, np.linalg.norm(Moscu-(pendientes[i]*x +b)))\n",
+    "\n",
+    "norma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "125a8cdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([103.74012268, 119.10128505, 198.88683456, 103.42488945,\n",
+       "       226.64024617, 106.92798234, 111.19591723, 221.4835702 ,\n",
+       "       105.63208624, 187.63220649, 101.88814859, 168.32832981,\n",
+       "       101.87258023, 116.49177354, 137.66066571, 118.6725245 ,\n",
+       "       140.37223114, 178.20158021, 160.31206487, 102.47733086,\n",
+       "       105.42770983, 103.77262207, 136.85275525, 184.27253208,\n",
+       "       155.74154684, 102.23216211, 193.51865025, 131.81288986,\n",
+       "       152.89639184, 107.31175651, 191.18491085, 153.67971081,\n",
+       "       142.65181864, 232.648501  , 200.26319132, 205.88722869,\n",
+       "       239.64747767, 181.68833125, 150.34418745, 190.92704044,\n",
+       "       120.90622013, 124.15987709, 124.19271452, 148.80125098,\n",
+       "       172.78425977, 122.44226811, 119.49649354, 228.24792804,\n",
+       "       105.11603855, 106.54819037, 105.99421794, 116.73006738,\n",
+       "       144.63804474, 159.77651706, 169.11856532, 101.81844072,\n",
+       "       156.14657383, 123.20050706, 104.01972208, 139.61484059,\n",
+       "       132.14087559, 104.86993145, 109.58077805, 201.18369857,\n",
+       "       107.71475569, 239.83583537, 131.27952935, 145.67620517,\n",
+       "       123.31041451, 200.36447806, 127.46681188, 131.96633523,\n",
+       "       170.61656564, 139.73411937, 158.48387879, 167.76088962,\n",
+       "       114.81770689, 137.11025104, 178.11646364, 114.05663456,\n",
+       "       160.47108255, 113.82076673, 102.05539046, 178.57242344,\n",
+       "       105.40038746, 162.98252235, 119.15336608, 140.92124799,\n",
+       "       143.30196235, 139.00477609, 111.56081122, 102.19452411,\n",
+       "       103.29183791, 133.8449126 , 132.15674225, 107.6859048 ,\n",
+       "       164.49133218, 141.96081522, 149.95620344, 128.39673771])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(99)\n",
+    "\n",
+    "norma = np.array([])\n",
+    "\n",
+    "for i in range(100):\n",
+    "    norma = np.append(norma, np.linalg.norm(Moscu-(pendientes[i]*x +b)))\n",
+    "\n",
+    "norma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d8ef4e2",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d103b25",
+   "id": "67bf1a3b",
    "metadata": {},
    "outputs": [],
    "source": []
