Export obtained data

--- a/Numpy/Numpy.ipynb
+++ b/Numpy/Numpy.ipynb
@@ -2174,17 +2174,248 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d8ef4e2",
+   "id": "73bde95d",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Exportando el archivo generado"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "67bf1a3b",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.39291034, 0.30436554, 0.79677648, 0.47388208, 0.86371553,\n",
+       "       0.3659481 , 0.52988646, 0.8514655 , 0.49488924, 0.10165313,\n",
+       "       0.4260816 , 0.71889701, 0.44350741, 0.31534788, 0.23909309,\n",
+       "       0.30612208, 0.23066619, 0.74472542, 0.69728016, 0.46015021,\n",
+       "       0.37715578, 0.47784947, 0.24164193, 0.76025506, 0.68463327,\n",
+       "       0.45514327, 0.78348721, 0.6124076 , 0.19378254, 0.3633389 ,\n",
+       "       0.77766659, 0.67883886, 0.64668317, 0.87790028, 0.80016276,\n",
+       "       0.81391781, 0.89431541, 0.11673042, 0.66933356, 0.77702172,\n",
+       "       0.57325353, 0.28477274, 0.58575284, 0.20552729, 0.73065035,\n",
+       "       0.57918875, 0.30276159, 0.86752003, 0.49065942, 0.36862107,\n",
+       "       0.49769814, 0.55609018, 0.65264095, 0.17459279, 0.14941028,\n",
+       "       0.43962847, 0.6857647 , 0.28834758, 0.38993916, 0.63740322,\n",
+       "       0.25690607, 0.48853202, 0.34936369, 0.80242296, 0.36068776,\n",
+       "       0.89475567, 0.61062554, 0.21468146, 0.28793506, 0.80041163,\n",
+       "       0.59754569, 0.61291831, 0.72495388, 0.63777187, 0.17815178,\n",
+       "       0.71738776, 0.32281473, 0.62957667, 0.1258983 , 0.32634049,\n",
+       "       0.69771562, 0.3274517 , 0.41984215, 0.12472317, 0.49302584,\n",
+       "       0.70455542, 0.56625089, 0.64142178, 0.6486425 , 0.23489215,\n",
+       "       0.3386147 , 0.45425973, 0.47225572, 0.61910226, 0.25685342,\n",
+       "       0.36087474, 0.708632  , 0.22581373, 0.66821663, 0.6007949 ])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pendientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "bfb87923",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([103.74012268, 119.10128505, 198.88683456, 103.42488945,\n",
+       "       226.64024617, 106.92798234, 111.19591723, 221.4835702 ,\n",
+       "       105.63208624, 187.63220649, 101.88814859, 168.32832981,\n",
+       "       101.87258023, 116.49177354, 137.66066571, 118.6725245 ,\n",
+       "       140.37223114, 178.20158021, 160.31206487, 102.47733086,\n",
+       "       105.42770983, 103.77262207, 136.85275525, 184.27253208,\n",
+       "       155.74154684, 102.23216211, 193.51865025, 131.81288986,\n",
+       "       152.89639184, 107.31175651, 191.18491085, 153.67971081,\n",
+       "       142.65181864, 232.648501  , 200.26319132, 205.88722869,\n",
+       "       239.64747767, 181.68833125, 150.34418745, 190.92704044,\n",
+       "       120.90622013, 124.15987709, 124.19271452, 148.80125098,\n",
+       "       172.78425977, 122.44226811, 119.49649354, 228.24792804,\n",
+       "       105.11603855, 106.54819037, 105.99421794, 116.73006738,\n",
+       "       144.63804474, 159.77651706, 169.11856532, 101.81844072,\n",
+       "       156.14657383, 123.20050706, 104.01972208, 139.61484059,\n",
+       "       132.14087559, 104.86993145, 109.58077805, 201.18369857,\n",
+       "       107.71475569, 239.83583537, 131.27952935, 145.67620517,\n",
+       "       123.31041451, 200.36447806, 127.46681188, 131.96633523,\n",
+       "       170.61656564, 139.73411937, 158.48387879, 167.76088962,\n",
+       "       114.81770689, 137.11025104, 178.11646364, 114.05663456,\n",
+       "       160.47108255, 113.82076673, 102.05539046, 178.57242344,\n",
+       "       105.40038746, 162.98252235, 119.15336608, 140.92124799,\n",
+       "       143.30196235, 139.00477609, 111.56081122, 102.19452411,\n",
+       "       103.29183791, 133.8449126 , 132.15674225, 107.6859048 ,\n",
+       "       164.49133218, 141.96081522, 149.95620344, 128.39673771])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "b919d4de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.03740123e+02, 3.92910340e-01],\n",
+       "       [1.19101285e+02, 3.04365545e-01],\n",
+       "       [1.98886835e+02, 7.96776484e-01],\n",
+       "       [1.03424889e+02, 4.73882082e-01],\n",
+       "       [2.26640246e+02, 8.63715530e-01],\n",
+       "       [1.06927982e+02, 3.65948097e-01],\n",
+       "       [1.11195917e+02, 5.29886460e-01],\n",
+       "       [2.21483570e+02, 8.51465499e-01],\n",
+       "       [1.05632086e+02, 4.94889237e-01],\n",
+       "       [1.87632206e+02, 1.01653135e-01],\n",
+       "       [1.01888149e+02, 4.26081597e-01],\n",
+       "       [1.68328330e+02, 7.18897009e-01],\n",
+       "       [1.01872580e+02, 4.43507413e-01],\n",
+       "       [1.16491774e+02, 3.15347876e-01],\n",
+       "       [1.37660666e+02, 2.39093094e-01],\n",
+       "       [1.18672525e+02, 3.06122077e-01],\n",
+       "       [1.40372231e+02, 2.30666193e-01],\n",
+       "       [1.78201580e+02, 7.44725420e-01],\n",
+       "       [1.60312065e+02, 6.97280164e-01],\n",
+       "       [1.02477331e+02, 4.60150209e-01],\n",
+       "       [1.05427710e+02, 3.77155776e-01],\n",
+       "       [1.03772622e+02, 4.77849471e-01],\n",
+       "       [1.36852755e+02, 2.41641930e-01],\n",
+       "       [1.84272532e+02, 7.60255055e-01],\n",
+       "       [1.55741547e+02, 6.84633266e-01],\n",
+       "       [1.02232162e+02, 4.55143272e-01],\n",
+       "       [1.93518650e+02, 7.83487205e-01],\n",
+       "       [1.31812890e+02, 6.12407603e-01],\n",
+       "       [1.52896392e+02, 1.93782536e-01],\n",
+       "       [1.07311757e+02, 3.63338900e-01],\n",
+       "       [1.91184911e+02, 7.77666585e-01],\n",
+       "       [1.53679711e+02, 6.78838861e-01],\n",
+       "       [1.42651819e+02, 6.46683171e-01],\n",
+       "       [2.32648501e+02, 8.77900283e-01],\n",
+       "       [2.00263191e+02, 8.00162756e-01],\n",
+       "       [2.05887229e+02, 8.13917814e-01],\n",
+       "       [2.39647478e+02, 8.94315413e-01],\n",
+       "       [1.81688331e+02, 1.16730416e-01],\n",
+       "       [1.50344187e+02, 6.69333563e-01],\n",
+       "       [1.90927040e+02, 7.77021723e-01],\n",
+       "       [1.20906220e+02, 5.73253531e-01],\n",
+       "       [1.24159877e+02, 2.84772743e-01],\n",
+       "       [1.24192715e+02, 5.85752842e-01],\n",
+       "       [1.48801251e+02, 2.05527295e-01],\n",
+       "       [1.72784260e+02, 7.30650353e-01],\n",
+       "       [1.22442268e+02, 5.79188754e-01],\n",
+       "       [1.19496494e+02, 3.02761595e-01],\n",
+       "       [2.28247928e+02, 8.67520033e-01],\n",
+       "       [1.05116039e+02, 4.90659416e-01],\n",
+       "       [1.06548190e+02, 3.68621070e-01],\n",
+       "       [1.05994218e+02, 4.97698136e-01],\n",
+       "       [1.16730067e+02, 5.56090177e-01],\n",
+       "       [1.44638045e+02, 6.52640946e-01],\n",
+       "       [1.59776517e+02, 1.74592794e-01],\n",
+       "       [1.69118565e+02, 1.49410277e-01],\n",
+       "       [1.01818441e+02, 4.39628474e-01],\n",
+       "       [1.56146574e+02, 6.85764701e-01],\n",
+       "       [1.23200507e+02, 2.88347579e-01],\n",
+       "       [1.04019722e+02, 3.89939157e-01],\n",
+       "       [1.39614841e+02, 6.37403219e-01],\n",
+       "       [1.32140876e+02, 2.56906072e-01],\n",
+       "       [1.04869931e+02, 4.88532022e-01],\n",
+       "       [1.09580778e+02, 3.49363692e-01],\n",
+       "       [2.01183699e+02, 8.02422961e-01],\n",
+       "       [1.07714756e+02, 3.60687759e-01],\n",
+       "       [2.39835835e+02, 8.94755674e-01],\n",
+       "       [1.31279529e+02, 6.10625542e-01],\n",
+       "       [1.45676205e+02, 2.14681457e-01],\n",
+       "       [1.23310415e+02, 2.87935057e-01],\n",
+       "       [2.00364478e+02, 8.00411631e-01],\n",
+       "       [1.27466812e+02, 5.97545688e-01],\n",
+       "       [1.31966335e+02, 6.12918312e-01],\n",
+       "       [1.70616566e+02, 7.24953877e-01],\n",
+       "       [1.39734119e+02, 6.37771867e-01],\n",
+       "       [1.58483879e+02, 1.78151782e-01],\n",
+       "       [1.67760890e+02, 7.17387758e-01],\n",
+       "       [1.14817707e+02, 3.22814725e-01],\n",
+       "       [1.37110251e+02, 6.29576669e-01],\n",
+       "       [1.78116464e+02, 1.25898302e-01],\n",
+       "       [1.14056635e+02, 3.26340487e-01],\n",
+       "       [1.60471083e+02, 6.97715623e-01],\n",
+       "       [1.13820767e+02, 3.27451703e-01],\n",
+       "       [1.02055390e+02, 4.19842151e-01],\n",
+       "       [1.78572423e+02, 1.24723167e-01],\n",
+       "       [1.05400387e+02, 4.93025835e-01],\n",
+       "       [1.62982522e+02, 7.04555419e-01],\n",
+       "       [1.19153366e+02, 5.66250886e-01],\n",
+       "       [1.40921248e+02, 6.41421782e-01],\n",
+       "       [1.43301962e+02, 6.48642502e-01],\n",
+       "       [1.39004776e+02, 2.34892152e-01],\n",
+       "       [1.11560811e+02, 3.38614699e-01],\n",
+       "       [1.02194524e+02, 4.54259735e-01],\n",
+       "       [1.03291838e+02, 4.72255715e-01],\n",
+       "       [1.33844913e+02, 6.19102258e-01],\n",
+       "       [1.32156742e+02, 2.56853415e-01],\n",
+       "       [1.07685905e+02, 3.60874738e-01],\n",
+       "       [1.64491332e+02, 7.08632000e-01],\n",
+       "       [1.41960815e+02, 2.25813730e-01],\n",
+       "       [1.49956203e+02, 6.68216626e-01],\n",
+       "       [1.28396738e+02, 6.00794903e-01]])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos = np.column_stack([norma,pendientes])\n",
+    "datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "3e6f44b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 2)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "2f18aa0a",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.savetxt('Data/norma_y_pendientes.csv', datos, delimiter=',')"
+   ]
   }
  ],
  "metadata": {
