Add section: Create categorical columns

--- a/Pandas/inmuebles_cdmx.ipynb
+++ b/Pandas/inmuebles_cdmx.ipynb
@@ -5891,11 +5891,369 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### **Crear columnas categoricas**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "2. #### Descripción: Esta columna debe de contener un resumen de la información clave de las propiedades que se mostrarán en el sitio web: tipo de propiedad, barrio, cantidad de habitaciones y plazas de estacionamiento."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 79,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "datos['Descripcion'] = datos['Tipo'] + datos['Colonia']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 80,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Tipo</th>\n",
+              "      <th>Colonia</th>\n",
+              "      <th>Habitaciones</th>\n",
+              "      <th>Garages</th>\n",
+              "      <th>Suites</th>\n",
+              "      <th>Area</th>\n",
+              "      <th>Valor</th>\n",
+              "      <th>Condominio</th>\n",
+              "      <th>Impuesto</th>\n",
+              "      <th>Valor_mensual</th>\n",
+              "      <th>Valor_anual</th>\n",
+              "      <th>Descripcion</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Cocineta</td>\n",
+              "      <td>Condesa</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>5950.0</td>\n",
+              "      <td>1750.0</td>\n",
+              "      <td>210.0</td>\n",
+              "      <td>7700.0</td>\n",
+              "      <td>92610.0</td>\n",
+              "      <td>CocinetaCondesa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Casa</td>\n",
+              "      <td>Polanco</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>100</td>\n",
+              "      <td>24500.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>CasaPolanco</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Conjunto Comercial/Sala</td>\n",
+              "      <td>Santa Fe</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>150</td>\n",
+              "      <td>18200.0</td>\n",
+              "      <td>14070.0</td>\n",
+              "      <td>3888.5</td>\n",
+              "      <td>32270.0</td>\n",
+              "      <td>391128.5</td>\n",
+              "      <td>Conjunto Comercial/SalaSanta Fe</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Departamento</td>\n",
+              "      <td>Centro Histórico</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>15</td>\n",
+              "      <td>2800.0</td>\n",
+              "      <td>1365.0</td>\n",
+              "      <td>70.0</td>\n",
+              "      <td>4165.0</td>\n",
+              "      <td>50050.0</td>\n",
+              "      <td>DepartamentoCentro Histórico</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Departamento</td>\n",
+              "      <td>Del Valle</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>48</td>\n",
+              "      <td>2800.0</td>\n",
+              "      <td>805.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>3605.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>DepartamentoDel Valle</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                      Tipo           Colonia  Habitaciones  Garages  Suites  \\\n",
+              "0                 Cocineta           Condesa             1        0       0   \n",
+              "1                     Casa           Polanco             2        0       1   \n",
+              "2  Conjunto Comercial/Sala          Santa Fe             0        4       0   \n",
+              "3             Departamento  Centro Histórico             1        0       0   \n",
+              "4             Departamento         Del Valle             1        0       0   \n",
+              "\n",
+              "   Area    Valor  Condominio  Impuesto  Valor_mensual  Valor_anual  \\\n",
+              "0    40   5950.0      1750.0     210.0         7700.0      92610.0   \n",
+              "1   100  24500.0         NaN       NaN            NaN          NaN   \n",
+              "2   150  18200.0     14070.0    3888.5        32270.0     391128.5   \n",
+              "3    15   2800.0      1365.0      70.0         4165.0      50050.0   \n",
+              "4    48   2800.0       805.0       NaN         3605.0          NaN   \n",
+              "\n",
+              "                       Descripcion  \n",
+              "0                  CocinetaCondesa  \n",
+              "1                      CasaPolanco  \n",
+              "2  Conjunto Comercial/SalaSanta Fe  \n",
+              "3     DepartamentoCentro Histórico  \n",
+              "4            DepartamentoDel Valle  "
+            ]
+          },
+          "execution_count": 80,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "datos.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 81,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "datos['Descripcion'] = datos['Tipo'] + ' en la colonia ' + datos['Colonia'] + ' con ' + \\\n",
+        "                            datos['Habitaciones'].astype(str) + ' cuarto(s) y ' + \\\n",
+        "                            datos['Garages'].astype(str)  + ' plazas de estacionamiento.'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 82,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Tipo</th>\n",
+              "      <th>Colonia</th>\n",
+              "      <th>Habitaciones</th>\n",
+              "      <th>Garages</th>\n",
+              "      <th>Suites</th>\n",
+              "      <th>Area</th>\n",
+              "      <th>Valor</th>\n",
+              "      <th>Condominio</th>\n",
+              "      <th>Impuesto</th>\n",
+              "      <th>Valor_mensual</th>\n",
+              "      <th>Valor_anual</th>\n",
+              "      <th>Descripcion</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Cocineta</td>\n",
+              "      <td>Condesa</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>5950.0</td>\n",
+              "      <td>1750.0</td>\n",
+              "      <td>210.0</td>\n",
+              "      <td>7700.0</td>\n",
+              "      <td>92610.0</td>\n",
+              "      <td>Cocineta en la colonia Condesa con 1 cuarto(s)...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Casa</td>\n",
+              "      <td>Polanco</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>100</td>\n",
+              "      <td>24500.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Casa en la colonia Polanco con 2 cuarto(s) y 0...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Conjunto Comercial/Sala</td>\n",
+              "      <td>Santa Fe</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>150</td>\n",
+              "      <td>18200.0</td>\n",
+              "      <td>14070.0</td>\n",
+              "      <td>3888.5</td>\n",
+              "      <td>32270.0</td>\n",
+              "      <td>391128.5</td>\n",
+              "      <td>Conjunto Comercial/Sala en la colonia Santa Fe...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Departamento</td>\n",
+              "      <td>Centro Histórico</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>15</td>\n",
+              "      <td>2800.0</td>\n",
+              "      <td>1365.0</td>\n",
+              "      <td>70.0</td>\n",
+              "      <td>4165.0</td>\n",
+              "      <td>50050.0</td>\n",
+              "      <td>Departamento en la colonia Centro Histórico co...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Departamento</td>\n",
+              "      <td>Del Valle</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>48</td>\n",
+              "      <td>2800.0</td>\n",
+              "      <td>805.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>3605.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Departamento en la colonia Del Valle con 1 cua...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                      Tipo           Colonia  Habitaciones  Garages  Suites  \\\n",
+              "0                 Cocineta           Condesa             1        0       0   \n",
+              "1                     Casa           Polanco             2        0       1   \n",
+              "2  Conjunto Comercial/Sala          Santa Fe             0        4       0   \n",
+              "3             Departamento  Centro Histórico             1        0       0   \n",
+              "4             Departamento         Del Valle             1        0       0   \n",
+              "\n",
+              "   Area    Valor  Condominio  Impuesto  Valor_mensual  Valor_anual  \\\n",
+              "0    40   5950.0      1750.0     210.0         7700.0      92610.0   \n",
+              "1   100  24500.0         NaN       NaN            NaN          NaN   \n",
+              "2   150  18200.0     14070.0    3888.5        32270.0     391128.5   \n",
+              "3    15   2800.0      1365.0      70.0         4165.0      50050.0   \n",
+              "4    48   2800.0       805.0       NaN         3605.0          NaN   \n",
+              "\n",
+              "                                         Descripcion  \n",
+              "0  Cocineta en la colonia Condesa con 1 cuarto(s)...  \n",
+              "1  Casa en la colonia Polanco con 2 cuarto(s) y 0...  \n",
+              "2  Conjunto Comercial/Sala en la colonia Santa Fe...  \n",
+              "3  Departamento en la colonia Centro Histórico co...  \n",
+              "4  Departamento en la colonia Del Valle con 1 cua...  "
+            ]
+          },
+          "execution_count": 82,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "datos.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 83,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Departamento en la colonia Napoles con 1 cuarto(s) y 0 plazas de estacionamiento.'"
+            ]
+          },
+          "execution_count": 83,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "datos.iloc[500].Descripcion"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### 2. Tiene suite: Esta debe de ser una columna que indique si la propiedad tiene o no tiene suites, sin importar la cantidad"
+      ]
     }
   ],
   "metadata": {
